@@ -177,3 +177,4 @@ requests
 openwsman
 swig
 userspace-rcu
+docutils
