@@ -145,7 +145,7 @@ e3147abc52df2ceac1e9affef45bf37e2f2e1d9979bc94a761ee11e4044072ac  makedumpfile-1
 52d808c29dcaa83c142ceb2b418d01e9423811b082eff63fa0336bb7f0590c45  thin-provisioning-tools-0.6.3.tar.gz
 2ca71334bb73c98171ebbd299077233be736cf3bbdde48366f2535ed60f10cfc  crmsh-2.2.1.tar.gz
 62a31a1d24e8dfb5bb2b14cd5ed5964445e840985ce370ed70116f31ca5e93f9  nmon-16c.tar.gz
-2849311b018f9ae7c423b483a616dc973f6f7cadd894b3e7866f29f94ca7da0a  linux_firmware-master_20160209.tar.xz
+d135e8b6357e9ab2db9c821c77a6e32dbab471513eea953df738f6432c184351  linux_firmware-master_20161101.tar.xz
 496e9762d20be8afaa26881a3a12e543d092f787a33850c523635ab39ebaaa7b  scst-trunk_r7021.tar.gz
 2c8f46e17121bc1c422f42f37be752bf918c802db843cc9c2eeda2a5fa9f1a7d  munin-c-0.0.9.tar.gz
 d0071bf00fdf6591cd6ea5caf89fa57ada03d263da1f80f17deff76acf7419e1  open-iscsi-2.0.874.tar.gz
@@ -159,3 +159,4 @@ d06ebb8e1d9a22d19e38d63fdb83954253f39bedc5d46232a05645685722ca37  libffi-3.2.1.t
 c9d846e029c477bbc8c34cef8f30e2216258021fd9277a1b588db67efdc204ad  openwsman-2.6.3.tar.gz
 2939aae39dec06095462f1b95ce1c958ac80d07b926e48871046d17c0094f44c  swig-3.0.10.tar.gz
 8f7fa313b1e0a3f742cea24ce63a39c0efe63e615a769e2961e55bd2663ecaa3  userspace-rcu-0.9.2.tar.bz2
+c7db717810ab6965f66c8cf0398a98c9d8df982da39b4cd7f162911eb89596fa  docutils-0.12.tar.gz
